--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "first-react",
+  "homepage": "https://jzzlyghyzzly.github.io/my-mall-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
